--- a/src/constants/fields/deviceudi.yaml
+++ b/src/constants/fields/deviceudi.yaml
@@ -157,6 +157,12 @@ properties:
   gmdn_terms:
     items:
       properties:
+        code:
+          description: "GMDN Preferred Term Code of the common device type associated with the FDA PT Code."
+          format:
+          is_exact: false
+          possible_values:
+          type: string
         definition:
           description: "Definition of the common device type associated with the GMDN Preferred Term Code/FDA PT Code."
           format:
@@ -169,6 +175,26 @@ properties:
           is_exact: true
           possible_values:
           type: string
+        implantable:
+          description: "GMDN Implantable flag."
+          format:
+          is_exact: false
+          possible_values:
+            type: one_of
+            value:
+              'true': "true"
+              'false': "false"
+          type: boolean
+        code_status:
+          description: "GMDN Term Status, Active or Obsolete."
+          format:
+          is_exact: false
+          possible_values:
+            type: one_of
+            value:
+              'Active': "Active"
+              'Obsolete': "Obsolete"
+          type: boolean
       type: object
     type: array
   has_donation_id_number:
@@ -225,7 +251,7 @@ properties:
     items:
       properties:
         id:
-          description: "An identifier that is the main (primary) lookup for a medical device and meets the requirements to uniquely identify a device through its distribution and use. The primary DI number will be located on the base package, which is the lowest package level of a medical device containing a full UDI. For medical devices without packaging, the primary DI number and full UDI may be on the device itself."
+          description: "A unique numeric or alphanumeric code specific to a device version or model."
           format:
           is_exact: false
           possible_values:
