--- a/src/constants/fields/master_harmonization.yaml
+++ b/src/constants/fields/master_harmonization.yaml
@@ -142,6 +142,30 @@ drug:
     - pharm_class_cs
     - nui
     - pharm_class_pe
+  remsspl:
+    - manufacturer_name
+    - unii
+    - product_type
+    - spl_set_id
+    - route
+    - generic_name
+    - brand_name
+    - product_ndc
+    - substance_name
+    - spl_id
+    - is_original_packager
+    - package_ndc
+    - upc
+    - original_packager_product_ndc
+    - application_number
+    - rxcui
+    - rxstring
+    - rxtty
+    - pharm_class_moa
+    - pharm_class_epc
+    - pharm_class_cs
+    - nui
+    - pharm_class_pe
 food:
   enforcement: []
   event: []
