--- a/src/constants/fields/master_fields.yaml
+++ b/src/constants/fields/master_fields.yaml
@@ -7703,7 +7703,8 @@ drug:
                     items:
                       properties:
                         protocol:
-                          type: object
+                          type: array
+                          items:
                             properties:
                               code:
                                 description: "The code for this protocol in substance administration."
@@ -7770,7 +7771,8 @@ drug:
                                     possible_values:
                                     type: string
                         approval:
-                          type: object
+                          type: array
+                          items:
                             properties:
                               code:
                                 description: "The code for this approval in substance administration."
@@ -7825,11 +7827,12 @@ drug:
       rems_goals:
         type: object
         properties:
-          description: "Includes all the raw text content for this section.."
-          format:
-          is_exact: false
-          possible_values:
-          type: string
+          content:
+            description: "Includes all the raw text content for this section.."
+            format:
+            is_exact: false
+            possible_values:
+            type: string
           effective_time:
             description: "Date reference to the particular version of the labeling document."
             format: date
@@ -7939,7 +7942,8 @@ drug:
                                 possible_values:
                                 type: string
                     approval:
-                      type: object
+                      type: array
+                      items:
                         properties:
                           code:
                             description: "The code for this approval in substance administration."
@@ -8047,7 +8051,8 @@ drug:
                                 possible_values:
                                 type: string
                     approval:
-                      type: object
+                      type: array
+                      items:
                         properties:
                           code:
                             description: "The code for this approval in substance administration."
