Updated Community apps page

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -4,8 +4,8 @@
   url: 'https://openvigil.pharmacology.uni-kiel.de/openvigilfda.php'
 - title: 'WIZMED'
   url: 'https://www.wizmed.com/'
-- title: 'EMERGENCY Recall ALERT Service'
-  url: 'https://emert.org'
+- title: 'Recalls.Me'
+  url: 'https://recalls.me'
 - title: 'AVE'
   url: 'https://adversevetevents.com/'
 - title: 'Product Recall Tracker'
