--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -1,7 +1,5 @@
 - title: 'Find recalled food products in your state'
   url: 'http://esridc.github.io/openfda'
-- title: 'OpenVigilFDA'
-  url: 'https://openvigil.pharmacology.uni-kiel.de/openvigilfda.php'
 - title: 'WIZMED'
   url: 'https://www.wizmed.com/'
 - title: 'Recalls.Me'
@@ -12,3 +10,7 @@
   url: 'https://recall.report/'
 - title: 'Recalls.fyi'
   url: 'https://www.recalls.fyi'
+- title: 'Orca1 Active Medical Device Surveillance'
+  urll: 'https://orca1.ai'
+- title: 'MEDPilot'
+  url: 'https://www.medpilot.com.tw/#/'
