Various bug fixes and language updates.

--- a/src/pages/apis/other/historicaldocument/_meta.yaml
+++ b/src/pages/apis/other/historicaldocument/_meta.yaml
@@ -1,11 +1,12 @@
-type: endpoint
 documentTitle: openFDA › Other › Historical Documents
-label: Historical Documents
-title: Historical Documents
+name: Historical Documents
 description: ""
 datasets:
   - Historical Documents
+label: Historical Documents
+title: Historical Documents
 path: /apis/other/historicaldocument
 api_path: /other/historicaldocument
 start: 19130101
 status: otherhistoricaldocument
+type: endpoint
