Historical docs updates (#254)
* Copied over most files.

* Added page files

* Fixed a broken page

* Various bug fixes and language updates.

* More language updates, fixed data link, and added reference docs

* Fixed capitalization issue for panels directory

* Fixed build issue & missing space

* Fixes date inaccuracy

* Switched api link back to prod to merge

--- a/src/pages/about/updates/updates.yaml
+++ b/src/pages/about/updates/updates.yaml
@@ -135,3 +135,7 @@ updates:
     path: /apis/wildcard-search/
     date: 2024-02-23
     desc: 'All openFDA API endpoints may be queried using a "wildcard search". Click this link for more details.'
+  - title: "New openFDA Dataset - Historical Documents"
+    path: /apis/other/historicaldocument/
+    date: 2024-03-20
+    desc: "The dataset Historical Documents is now available."
