--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -378,6 +378,24 @@
   link: /other/
   collapse: true
   items:
+    - title: Historical Documents
+      id: other-historicaldocument
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/other/historicaldocument/
+        - title: How to use the API
+          link: /apis/other/historicaldocument/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/other/historicaldocument/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/other/historicaldocument/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/other/historicaldocument/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/other/historicaldocument/download/
+        - title: Searchable fields
+          link: /apis/other/historicaldocument/searchable-fields/
     - title: NSDE
       id: other-nsde
       collapse: true
