--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -11,6 +11,6 @@
 - title: 'Recalls.fyi'
   url: 'https://www.recalls.fyi'
 - title: 'Orca1 Active Medical Device Surveillance'
-  urll: 'https://orca1.ai'
+  url: 'https://orca1.ai'
 - title: 'MEDPilot'
   url: 'https://www.medpilot.com.tw/#/'
