Added MAUDE 2.0 & removed three defunct app links

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -1,11 +1,5 @@
-- title: 'Find recalled food products in your state'
-  url: 'http://esridc.github.io/openfda'
-- title: 'WIZMED'
-  url: 'https://www.wizmed.com/'
 - title: 'Recalls.Me'
   url: 'https://recalls.me'
-- title: 'AVE'
-  url: 'https://adversevetevents.com/'
 - title: 'Product Recall Tracker'
   url: 'https://recall.report/'
 - title: 'Recalls.fyi'
@@ -14,3 +8,5 @@
   url: 'https://orca1.ai'
 - title: 'MEDPilot'
   url: 'https://www.medpilot.com.tw/#/'
+- title: 'MAUDE 2.0'
+  url: 'https://www.riskbased.ai/'
