--- a/src/constants/fields/master_fields.yaml
+++ b/src/constants/fields/master_fields.yaml
@@ -7419,7 +7419,7 @@ drug:
         possible_values:
         type: string
       status:
-        description: "Presntation shortage status"
+        description: "Presentation shortage status"
         format:
         is_exact: false
         possible_values:
