Updated MEDPilot URL.

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -7,6 +7,6 @@
 - title: 'Orca1 Active Medical Device Surveillance'
   url: 'https://orca1.ai'
 - title: 'MEDPilot'
-  url: 'https://www.medpilot.com.tw/#/'
+  url: 'https://medpilot.stpi.narl.org.tw/info'
 - title: 'MAUDE 2.0'
   url: 'https://www.riskbased.ai/'
