Updated a community application link.

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -8,5 +8,5 @@
   url: 'https://orca1.ai'
 - title: 'MEDPilot'
   url: 'https://medpilot.stpi.narl.org.tw/info'
-- title: 'MAUDE 2.0'
-  url: 'https://www.riskbased.ai/'
+- title: 'MAUDE 3.0'
+  url: 'https://www.riskbased.ai/maude'
