--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "open-fda-gov",
   "description": "openFDA website",
   "version": "2.0.0",
-  "author": "Jack Finch <jack.finch@semanticbits.com>",
+  "author": "Violet Wren <violet.wren@icf.com>",
   "scripts": {
     "dev": "./node_modules/.bin/gatsby develop -H 0.0.0.0 -p 3000",
     "build": "./node_modules/.bin/gatsby build --verbose",
