--- a/package.json
+++ b/package.json
@@ -74,12 +74,13 @@
     "react-document-title": "^2.0.3",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.1.3",
-    "react-highlight.js": "^1.0.0",
+    "react-highlight.js": "^1.0.7",
     "react-joyride": "^2.0.5",
     "react-modal": "^3.1.0",
     "react-promise": "2.0.0",
     "react-radio-group": "^3.0.2",
     "react-sticky-state": "^2.1.9",
+    "react-table": "^6.11.5",
     "react-timeseries-charts": "^0.14.0",
     "react-tippy": "^1.2.3",
     "react-transition-group": "^2.2.1",
@@ -107,6 +108,7 @@
     "@types/node": "^20.4.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-highlight.js": "^1.0.5",
     "@types/react-modal": "^3.16.3",
     "@types/react-radio-group": "^3.0.7",
     "@types/react-select": "^5.0.1",
