--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@types/dateformat": "^5.0.3",
     "@types/jquery": "^3.5.32",
     "@types/node": "^20.4.2",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-highlight.js": "^1.0.5",
