--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "react-promise": "2.0.0",
     "react-radio-group": "^3.0.2",
     "react-sticky-state": "^2.1.9",
-    "react-table": "^6.11.5",
+    "react-table": "^7.8.0",
+    "react-table-6": "^6.11.0",
     "react-timeseries-charts": "^0.14.0",
     "react-tippy": "^1.2.3",
     "react-transition-group": "^2.2.1",
@@ -104,15 +105,18 @@
     "@babel/preset-react": "^7.26.3",
     "@types/classnames": "^2.3.0",
     "@types/dateformat": "^5.0.3",
+    "@types/file-saver": "^2.0.7",
     "@types/jquery": "^3.5.32",
     "@types/node": "^20.4.2",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19.1.2",
+    "@types/react-custom-scrollbars": "^4.0.13",
     "@types/react-dom": "^19.1.2",
     "@types/react-highlight.js": "^1.0.5",
     "@types/react-modal": "^3.16.3",
     "@types/react-radio-group": "^3.0.7",
     "@types/react-select": "^5.0.1",
+    "@types/react-table": "^7.7.20",
     "cypress": "^12.0.0",
     "cypress-multi-reporters": "^1.5.0",
     "mocha-junit-reporter": "^2.0.2",
