--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "develop": "gatsby develop",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "test:e2e": "start-server-and-test dev http://localhost:3000 cy:open",
-    "test:e2e:ci": "start-server-and-test dev http://localhost:3000 cy:run",
+    "test:e2e": "start-server-and-test dev http://127.0.0.1:3000 cy:open",
+    "test:e2e:ci": "start-server-and-test dev http://127.0.0.1:3000 cy:run",
     "type-check": "tsc --noEmit"
   },
   "repository": {
