--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -391,6 +391,30 @@
         - title: Searchable fields
           link: /apis/food/event/searchable-fields/
 
+- title: Cosmetic API Endpoints
+  id: cosmetic-api-endpoints
+  link: /cosmetic/
+  collapse: true
+  items:
+    - title: Cosmetic Events
+      id: cosmetic-adverse-events
+      collapse: true
+      items:
+        - title: Overview
+          link: /apis/cosmetic/event/
+        - title: How to use the API
+          link: /apis/cosmetic/event/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/cosmetic/event/example-api-queries/
+        - title: Explore the API with an interactive chart
+          link: /apis/cosmetic/event/explore-the-api-with-an-interactive-chart/
+        - title: Understanding the API Results
+          link: /apis/cosmetic/event/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/cosmetic/event/download/
+        - title: Searchable fields
+          link: /apis/cosmetic/event/searchable-fields/
+
 - title: Other API Endpoints
   id: other-api-endpoints
   link: /other/
