fixed gatsby issue while going back

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gatsby-plugin-react-helmet": "^4.15.0",
     "gatsby-plugin-sass": "^4.15.0",
     "gatsby-plugin-stylus": "^3.15.0",
+    "gatsby-plugin-typescript": "^3.15.0",
     "gatsby-remark-autolink-headers": "^4.12.0",
     "gatsby-remark-copy-linked-files": "^4.12.0",
     "gatsby-remark-prismjs": "^5.12.0",
@@ -108,9 +109,9 @@
     "@types/dateformat": "^5.0.3",
     "@types/file-saver": "^2.0.7",
     "@types/jquery": "^3.5.32",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.19.1",
     "@types/prop-types": "^15.7.14",
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.8",
     "@types/react-custom-scrollbars": "^4.0.13",
     "@types/react-document-title": "^2.0.10",
     "@types/react-dom": "^19.1.2",
