--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "open-fda-gov",
   "description": "openFDA website",
   "version": "2.0.0",
-  "author": "Jack Finch <jack.finch@semanticbits.com>",
+  "author": "Violet Wren, Priyanka Ayer",
   "scripts": {
     "dev": "gatsby develop -H 0.0.0.0 -p 3000",
     "serve": "gatsby serve -H 0.0.0.0 -p 3000",
