Adding vespper  on community page

--- a/src/pages/community/_apps.yaml
+++ b/src/pages/community/_apps.yaml
@@ -8,3 +8,5 @@
   url: 'https://medpilot.stpi.narl.org.tw/info'
 - title: 'MAUDE 3.0'
   url: 'https://www.riskbased.ai/maude'
+- title: 'Vespper'
+  url: 'https://www.vespper.com'
