Approved crls web pages (#282)
* Added Approved CRLs page and relevant nav items

* Capitalized URL

* Fixed typo

* Updated push-site.sh

* Added full web pages

* PR updates

* PR updates

* PR updates

* PR updates

* PR updates

* Fixed the remaining CSS issues.

* Removed chart, fixed Data Dictionary

* Update API_LINK to point to the production FDA API

* Update CRL queries to point to the production FDA API

* Update data category for 'Other' to include Complete Response Letters

---------

Co-authored-by: Denis Krylov <dkrylovsb@users.noreply.github.com>

--- a/src/pages/apis/doc-links.yaml
+++ b/src/pages/apis/doc-links.yaml
@@ -402,6 +402,16 @@
       items:
         - title: Overview
           link: /apis/other/approved_CRLs/
+        - title: How to use the API
+          link: /apis/other/approved_CRLs/how-to-use-the-endpoint/
+        - title: Example API queries
+          link: /apis/other/approved_CRLs/example-api-queries/
+        - title: Understanding the API Results
+          link: /apis/other/approved_CRLs/understanding-the-api-results/
+        - title: Download the dataset
+          link: /apis/other/approved_CRLs/download/
+        - title: Searchable fields
+          link: /apis/other/approved_CRLs/searchable-fields/
     - title: Historical Documents
       id: other-historicaldocument
       collapse: true
